simple expat expample

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
 * text=auto !eol
+prototype/ExpatSimple/ExpatSimple.1 -text
+prototype/ExpatSimple/ExpatSimple.xcode/project.pbxproj -text
+prototype/ExpatSimple/ExpatSimple_Prefix.pch -text
+prototype/ExpatSimple/expat.h -text
+prototype/ExpatSimple/libexpat.a -text
+prototype/ExpatSimple/main.m -text
