--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,29 @@ prototype/ExpatSimple/ExpatSimple_Prefix.pch -text
 prototype/ExpatSimple/expat.h -text
 prototype/ExpatSimple/libexpat.a -text
 prototype/ExpatSimple/main.m -text
+prototype/SimpleODOCHandler/ApplicationController.h -text
+prototype/SimpleODOCHandler/ApplicationController.m -text
+prototype/SimpleODOCHandler/DocumentController.h -text
+prototype/SimpleODOCHandler/DocumentController.m -text
+prototype/SimpleODOCHandler/English.lproj/Credits.rtf -text
+prototype/SimpleODOCHandler/English.lproj/InfoPlist.strings -text
+prototype/SimpleODOCHandler/English.lproj/MainMenu.nib/classes.nib -text
+prototype/SimpleODOCHandler/English.lproj/MainMenu.nib/info.nib -text
+prototype/SimpleODOCHandler/English.lproj/MainMenu.nib/objects.nib -text
+prototype/SimpleODOCHandler/English.lproj/MainMenu~.nib/classes.nib -text
+prototype/SimpleODOCHandler/English.lproj/MainMenu~.nib/info.nib -text
+prototype/SimpleODOCHandler/English.lproj/MainMenu~.nib/objects.nib -text
+prototype/SimpleODOCHandler/English.lproj/MyDocument.nib/classes.nib -text
+prototype/SimpleODOCHandler/English.lproj/MyDocument.nib/info.nib -text
+prototype/SimpleODOCHandler/English.lproj/MyDocument.nib/objects.nib -text
+prototype/SimpleODOCHandler/Info.plist -text
+prototype/SimpleODOCHandler/MyDocument.h -text
+prototype/SimpleODOCHandler/MyDocument.m -text
+prototype/SimpleODOCHandler/SimpleODOCHandler.xcode/mbo.pbxuser -text
+prototype/SimpleODOCHandler/SimpleODOCHandler.xcode/project.pbxproj -text
+prototype/SimpleODOCHandler/SimpleODOCHandler_Prefix.pch -text
+prototype/SimpleODOCHandler/main.m -text
+prototype/SimpleODOCHandler/version.plist -text
 prototype/TCMXMLParser/ParserDelegate.h -text
 prototype/TCMXMLParser/ParserDelegate.m -text
 prototype/TCMXMLParser/TCMXMLParser.1 -text
