--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto !eol
+documentation/whiteboard-1411.jpg -text
 prototype/ExpatSimple/ExpatSimple.1 -text
 prototype/ExpatSimple/ExpatSimple.xcode/project.pbxproj -text
 prototype/ExpatSimple/ExpatSimple_Prefix.pch -text
