Introducing RendezCon - Sample Code for Both Controller and Rendezvous - Should evolve into a kind of reference Sample Code for both - Works quite well at the moment, changes to the services on the left (the ticks)   are not recognized instantly yet. wanted to use some kind of key value observing   for this, still to come

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,24 @@ prototype/ExpatSimple/ExpatSimple_Prefix.pch -text
 prototype/ExpatSimple/expat.h -text
 prototype/ExpatSimple/libexpat.a -text
 prototype/ExpatSimple/main.m -text
+prototype/RendezCon/Add.tiff -text
+prototype/RendezCon/Add_Pressed.tiff -text
+prototype/RendezCon/English.lproj/InfoPlist.strings -text
+prototype/RendezCon/English.lproj/MainMenu.nib/classes.nib -text
+prototype/RendezCon/English.lproj/MainMenu.nib/info.nib -text
+prototype/RendezCon/English.lproj/MainMenu.nib/keyedobjects.nib -text
+prototype/RendezCon/English.lproj/locversion.plist -text
+prototype/RendezCon/Info.plist -text
+prototype/RendezCon/Remove.tiff -text
+prototype/RendezCon/Remove_Pressed.tiff -text
+prototype/RendezCon/RendezCon.icns -text
+prototype/RendezCon/RendezCon.xcode/project.pbxproj -text
+prototype/RendezCon/RendezCon_Prefix.pch -text
+prototype/RendezCon/RendezvousBrowserController.h -text
+prototype/RendezCon/RendezvousBrowserController.m -text
+prototype/RendezCon/initialDefaults.plist -text
+prototype/RendezCon/main.m -text
+prototype/RendezCon/version.plist -text
 prototype/SimpleODOCHandler/ApplicationController.h -text
 prototype/SimpleODOCHandler/ApplicationController.m -text
 prototype/SimpleODOCHandler/DocumentController.h -text
