--- a/prototype/RendezCon/initialDefaults.plist
+++ b/prototype/RendezCon/initialDefaults.plist
@@ -18,6 +18,12 @@
         </dict>
         <dict>
             <key>serviceType</key>
+            <string>_http._tcp.</string>
+            <key>shouldSearchFor</key>
+            <true/>
+        </dict>
+        <dict>
+            <key>serviceType</key>
             <string>_ssh._tcp.</string>
             <key>shouldSearchFor</key>
             <true/>
@@ -25,12 +31,6 @@
         <dict>
             <key>serviceType</key>
             <string>_telnet._tcp.</string>
-            <key>shouldSearchFor</key>
-            <true/>
-        </dict>
-        <dict>
-            <key>serviceType</key>
-            <string>_http._tcp.</string>
             <key>shouldSearchFor</key>
             <true/>
         </dict>
@@ -48,12 +48,6 @@
         </dict>
         <dict>
             <key>serviceType</key>
-            <string>_hydra._tcp.</string>
-            <key>shouldSearchFor</key>
-            <true/>
-        </dict>
-        <dict>
-            <key>serviceType</key>
             <string>_printer._tcp.</string>
             <key>shouldSearchFor</key>
             <true/>
@@ -61,12 +55,6 @@
         <dict>
             <key>serviceType</key>
             <string>_ipp._tcp.</string>
-            <key>shouldSearchFor</key>
-            <true/>
-        </dict>
-        <dict>
-            <key>serviceType</key>
-            <string>_afp._tcp.</string>
             <key>shouldSearchFor</key>
             <true/>
         </dict>
@@ -84,15 +72,33 @@
         </dict>
         <dict>
             <key>serviceType</key>
-            <string>_smb._tcp.</string>
+            <string>_MacOSXDupSuppress._tcp.</string>
+            <key>shouldSearchFor</key>
+            <false/>
+        </dict>
+        <dict>
+            <key>serviceType</key>
+            <string>_hydra._tcp.</string>
+            <key>shouldSearchFor</key>
+            <false/>
+        </dict>
+        <dict>
+            <key>serviceType</key>
+            <string>_daap._tcp.</string>
             <key>shouldSearchFor</key>
             <true/>
         </dict>
         <dict>
             <key>serviceType</key>
-            <string>_MacOSXDupSuppress._tcp.</string>
+            <string>_distcc._tcp.</string>
             <key>shouldSearchFor</key>
             <true/>
+        </dict>
+        <dict>
+            <key>serviceType</key>
+            <string>_tivo_servemedia._tcp.</string>
+            <key>shouldSearchFor</key>
+            <false/>
         </dict>
     </array>
 </dict>
