- forgot release notes

--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,7 @@ prototype/RendezCon/English.lproj/MainMenu.nib/info.nib -text
 prototype/RendezCon/English.lproj/MainMenu.nib/keyedobjects.nib -text
 prototype/RendezCon/English.lproj/locversion.plist -text
 prototype/RendezCon/Info.plist -text
+prototype/RendezCon/ReleaseNotes.rtf -text
 prototype/RendezCon/Remove.tiff -text
 prototype/RendezCon/Remove_Pressed.tiff -text
 prototype/RendezCon/RendezCon.icns -text
