- Renamed xmpp to xmpp-cli

--- a/.gitattributes
+++ b/.gitattributes
@@ -54,17 +54,17 @@ prototype/TCMXMLParser/TCMXMLParser_Prefix.pch -text
 prototype/TCMXMLParser/expat.h -text
 prototype/TCMXMLParser/libexpat.a -text
 prototype/TCMXMLParser/main.m -text
-prototype/xmpp/Controller.h -text
-prototype/xmpp/Controller.m -text
-prototype/xmpp/Node.h -text
-prototype/xmpp/Node.m -text
-prototype/xmpp/XMLParser.h -text
-prototype/xmpp/XMLParser.m -text
-prototype/xmpp/XMLStream.h -text
-prototype/xmpp/XMLStream.m -text
-prototype/xmpp/expat.h -text
-prototype/xmpp/libexpat.a -text
-prototype/xmpp/main.m -text
-prototype/xmpp/xmpp.1 -text
-prototype/xmpp/xmpp.xcode/project.pbxproj -text
-prototype/xmpp/xmpp_Prefix.pch -text
+prototype/xmpp-cli/Controller.h -text
+prototype/xmpp-cli/Controller.m -text
+prototype/xmpp-cli/Node.h -text
+prototype/xmpp-cli/Node.m -text
+prototype/xmpp-cli/XMLParser.h -text
+prototype/xmpp-cli/XMLParser.m -text
+prototype/xmpp-cli/XMLStream.h -text
+prototype/xmpp-cli/XMLStream.m -text
+prototype/xmpp-cli/expat.h -text
+prototype/xmpp-cli/libexpat.a -text
+prototype/xmpp-cli/main.m -text
+prototype/xmpp-cli/xmpp.1 -text
+prototype/xmpp-cli/xmpp.xcode/project.pbxproj -text
+prototype/xmpp-cli/xmpp_Prefix.pch -text
