- Added XMPP.framework - xmpp-cli uses XMPP.framework

--- a/.gitattributes
+++ b/.gitattributes
@@ -54,16 +54,22 @@ prototype/TCMXMLParser/TCMXMLParser_Prefix.pch -text
 prototype/TCMXMLParser/expat.h -text
 prototype/TCMXMLParser/libexpat.a -text
 prototype/TCMXMLParser/main.m -text
+prototype/XMPP/English.lproj/InfoPlist.strings -text
+prototype/XMPP/Info.plist -text
+prototype/XMPP/Node.h -text
+prototype/XMPP/Node.m -text
+prototype/XMPP/XMLParser.h -text
+prototype/XMPP/XMLParser.m -text
+prototype/XMPP/XMLStream.h -text
+prototype/XMPP/XMLStream.m -text
+prototype/XMPP/XMPP.xcode/project.pbxproj -text
+prototype/XMPP/XMPP_Prefix.pch -text
+prototype/XMPP/expat.h -text
+prototype/XMPP/libexpat.a -text
+prototype/XMPP/main.c -text
+prototype/XMPP/version.plist -text
 prototype/xmpp-cli/Controller.h -text
 prototype/xmpp-cli/Controller.m -text
-prototype/xmpp-cli/Node.h -text
-prototype/xmpp-cli/Node.m -text
-prototype/xmpp-cli/XMLParser.h -text
-prototype/xmpp-cli/XMLParser.m -text
-prototype/xmpp-cli/XMLStream.h -text
-prototype/xmpp-cli/XMLStream.m -text
-prototype/xmpp-cli/expat.h -text
-prototype/xmpp-cli/libexpat.a -text
 prototype/xmpp-cli/main.m -text
 prototype/xmpp-cli/xmpp.1 -text
 prototype/xmpp-cli/xmpp.xcode/project.pbxproj -text
