--- a/prototype/RendezCon/initialDefaults.plist
+++ b/prototype/RendezCon/initialDefaults.plist
@@ -96,6 +96,12 @@
         </dict>
         <dict>
             <key>serviceType</key>
+            <string>_xserveraid._tcp.</string>
+            <key>shouldSearchFor</key>
+            <true/>
+        </dict>
+        <dict>
+            <key>serviceType</key>
             <string>_tivo_servemedia._tcp.</string>
             <key>shouldSearchFor</key>
             <false/>
