- first try of a rendezvous browser

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto !eol
+artwork/mockups/RendezvousBrowser.psd -text
 documentation/whiteboard-1411.jpg -text
 prototype/ExpatSimple/ExpatSimple.1 -text
 prototype/ExpatSimple/ExpatSimple.xcode/project.pbxproj -text
