updated the browser, made a new file because i discarded layers

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto !eol
 artwork/mockups/RendezvousBrowser.psd -text
+artwork/mockups/RendezvousBrowser2.psd -text
 documentation/whiteboard-1411.jpg -text
 prototype/ExpatSimple/ExpatSimple.1 -text
 prototype/ExpatSimple/ExpatSimple.xcode/project.pbxproj -text
