--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,19 @@ artwork/mockups/RendezvousBrowser2.psd -text
 documentation/connection-channel-bla.jpg -text
 documentation/session-lifcycle.jpg -text
 documentation/whiteboard-1411.jpg -text
+prototype/BEEPSample/BEEPChannel.h -text
+prototype/BEEPSample/BEEPChannel.m -text
+prototype/BEEPSample/BEEPListener.h -text
+prototype/BEEPSample/BEEPListener.m -text
+prototype/BEEPSample/BEEPSample.1 -text
+prototype/BEEPSample/BEEPSample.xcode/mbo.pbxuser -text
+prototype/BEEPSample/BEEPSample.xcode/project.pbxproj -text
+prototype/BEEPSample/BEEPSample_Prefix.pch -text
+prototype/BEEPSample/BEEPSession.h -text
+prototype/BEEPSample/BEEPSession.m -text
+prototype/BEEPSample/Controller.h -text
+prototype/BEEPSample/Controller.m -text
+prototype/BEEPSample/main.m -text
 prototype/ExpatSimple/ExpatSimple.1 -text
 prototype/ExpatSimple/ExpatSimple.xcode/project.pbxproj -text
 prototype/ExpatSimple/ExpatSimple_Prefix.pch -text
