--- a/.gitattributes
+++ b/.gitattributes
@@ -8,7 +8,6 @@ prototype/BEEPSample/BEEPChannel.h -text
 prototype/BEEPSample/BEEPChannel.m -text
 prototype/BEEPSample/BEEPListener.h -text
 prototype/BEEPSample/BEEPListener.m -text
-prototype/BEEPSample/BEEPSample.1 -text
 prototype/BEEPSample/BEEPSample.xcode/mbo.pbxuser -text
 prototype/BEEPSample/BEEPSample.xcode/project.pbxproj -text
 prototype/BEEPSample/BEEPSample_Prefix.pch -text
@@ -16,6 +15,11 @@ prototype/BEEPSample/BEEPSession.h -text
 prototype/BEEPSample/BEEPSession.m -text
 prototype/BEEPSample/Controller.h -text
 prototype/BEEPSample/Controller.m -text
+prototype/BEEPSample/English.lproj/InfoPlist.strings -text
+prototype/BEEPSample/English.lproj/MainMenu.nib/classes.nib -text
+prototype/BEEPSample/English.lproj/MainMenu.nib/info.nib -text
+prototype/BEEPSample/English.lproj/MainMenu.nib/objects.nib -text
+prototype/BEEPSample/Info.plist -text
 prototype/BEEPSample/main.m -text
 prototype/ExpatSimple/ExpatSimple.1 -text
 prototype/ExpatSimple/ExpatSimple.xcode/project.pbxproj -text
