--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,8 @@ prototype/BEEPSample/NSStringTCMAdditions.h -text
 prototype/BEEPSample/NSStringTCMAdditions.m -text
 prototype/BEEPSample/TCMBEEPChannel.h -text
 prototype/BEEPSample/TCMBEEPChannel.m -text
+prototype/BEEPSample/TCMBEEPFrame.h -text
+prototype/BEEPSample/TCMBEEPFrame.m -text
 prototype/BEEPSample/TCMBEEPListener.h -text
 prototype/BEEPSample/TCMBEEPListener.m -text
 prototype/BEEPSample/TCMBEEPManagementProfile.h -text
