SyntaxTestBench: initial checkin

--- a/.gitattributes
+++ b/.gitattributes
@@ -80,6 +80,54 @@ prototype/SimpleODOCHandler/SimpleODOCHandler.xcode/project.pbxproj -text
 prototype/SimpleODOCHandler/SimpleODOCHandler_Prefix.pch -text
 prototype/SimpleODOCHandler/main.m -text
 prototype/SimpleODOCHandler/version.plist -text
+prototype/SyntaxTestBench/AppController.h -text
+prototype/SyntaxTestBench/AppController.m -text
+prototype/SyntaxTestBench/English.lproj/InfoPlist.strings -text
+prototype/SyntaxTestBench/English.lproj/MainMenu.nib/classes.nib -text
+prototype/SyntaxTestBench/English.lproj/MainMenu.nib/info.nib -text
+prototype/SyntaxTestBench/English.lproj/MainMenu.nib/objects.nib -text
+prototype/SyntaxTestBench/English.lproj/MyDocument.nib/classes.nib -text
+prototype/SyntaxTestBench/English.lproj/MyDocument.nib/info.nib -text
+prototype/SyntaxTestBench/English.lproj/MyDocument.nib/keyedobjects.nib -text
+prototype/SyntaxTestBench/Info.plist -text
+prototype/SyntaxTestBench/LineNumberRulerView.h -text
+prototype/SyntaxTestBench/LineNumberRulerView.m -text
+prototype/SyntaxTestBench/MyDocument.h -text
+prototype/SyntaxTestBench/MyDocument.m -text
+prototype/SyntaxTestBench/SmallPopUpArrows.tiff -text
+prototype/SyntaxTestBench/SubEthaHighlighter_Prefix.pch -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/c.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/cpp.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/css.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/html.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/java.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/javascript.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/latex.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/objective-c.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/pascal.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/perl.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/php.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/python.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/ruby.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/sql.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/tcsh.plist -text
+prototype/SyntaxTestBench/Syntax[!!-~]Definitions/xml.plist -text
+prototype/SyntaxTestBench/SyntaxHighlighter.h -text
+prototype/SyntaxTestBench/SyntaxHighlighter.m -text
+prototype/SyntaxTestBench/SyntaxManager.h -text
+prototype/SyntaxTestBench/SyntaxManager.m -text
+prototype/SyntaxTestBench/SyntaxTestBench.xcode/pittenau.pbxuser -text
+prototype/SyntaxTestBench/SyntaxTestBench.xcode/project.pbxproj -text
+prototype/SyntaxTestBench/Tests/DocumentController.m -text
+prototype/SyntaxTestBench/Tests/TextDocument.m -text
+prototype/SyntaxTestBench/TextPopUpCell.h -text
+prototype/SyntaxTestBench/TextPopUpCell.m -text
+prototype/SyntaxTestBench/TextPopUpControl.h -text
+prototype/SyntaxTestBench/TextPopUpControl.m -text
+prototype/SyntaxTestBench/TextStorage.h -text
+prototype/SyntaxTestBench/TextStorage.m -text
+prototype/SyntaxTestBench/main.m -text
+prototype/SyntaxTestBench/version.plist -text
 prototype/TCMXMLParser/ParserDelegate.h -text
 prototype/TCMXMLParser/ParserDelegate.m -text
 prototype/TCMXMLParser/TCMXMLParser.1 -text
