--- a/.gitattributes
+++ b/.gitattributes
@@ -12,7 +12,6 @@ prototype/BEEPSample/Controller.m -text
 prototype/BEEPSample/English.lproj/InfoPlist.strings -text
 prototype/BEEPSample/English.lproj/MainMenu.nib/classes.nib -text
 prototype/BEEPSample/English.lproj/MainMenu.nib/info.nib -text
-prototype/BEEPSample/English.lproj/MainMenu.nib/objects.nib -text
 prototype/BEEPSample/Info.plist -text
 prototype/BEEPSample/NSDictionaryTCMAdditions.h -text
 prototype/BEEPSample/NSDictionaryTCMAdditions.m -text
@@ -33,6 +32,8 @@ prototype/BEEPSample/TCMBEEPMessage.m -text
 prototype/BEEPSample/TCMBEEPProfile.h -text
 prototype/BEEPSample/TCMBEEPSession.h -text
 prototype/BEEPSample/TCMBEEPSession.m -text
+prototype/BEEPSample/TCMBEEPSimpleSendProfile.h -text
+prototype/BEEPSample/TCMBEEPSimpleSendProfile.m -text
 prototype/BEEPSample/main.m -text
 prototype/ExpatSimple/ExpatSimple.1 -text
 prototype/ExpatSimple/ExpatSimple.xcode/project.pbxproj -text
