- Added initial SubEthaEdit project

--- a/.gitattributes
+++ b/.gitattributes
@@ -160,3 +160,19 @@ prototype/xmpp-cli/main.m -text
 prototype/xmpp-cli/xmpp.1 -text
 prototype/xmpp-cli/xmpp.xcode/project.pbxproj -text
 prototype/xmpp-cli/xmpp_Prefix.pch -text
+subethaedit/English.lproj/Credits.rtf -text
+subethaedit/English.lproj/InfoPlist.strings -text
+subethaedit/English.lproj/MainMenu.nib/classes.nib -text
+subethaedit/English.lproj/MainMenu.nib/info.nib -text
+subethaedit/English.lproj/MainMenu.nib/keyedobjects.nib -text
+subethaedit/English.lproj/MyDocument.nib/classes.nib -text
+subethaedit/English.lproj/MyDocument.nib/info.nib -text
+subethaedit/English.lproj/MyDocument.nib/keyedobjects.nib -text
+subethaedit/Info.plist -text
+subethaedit/MyDocument.h -text
+subethaedit/MyDocument.m -text
+subethaedit/SubEthaEdit.xcode/mbo.pbxuser -text
+subethaedit/SubEthaEdit.xcode/project.pbxproj -text
+subethaedit/SubEthaEdit_Prefix.pch -text
+subethaedit/main.m -text
+subethaedit/version.plist -text
