--- a/.gitattributes
+++ b/.gitattributes
@@ -171,8 +171,25 @@ subethaedit/English.lproj/MyDocument.nib/keyedobjects.nib -text
 subethaedit/Info.plist -text
 subethaedit/MyDocument.h -text
 subethaedit/MyDocument.m -text
+subethaedit/NSDictionaryTCMAdditions.h -text
+subethaedit/NSDictionaryTCMAdditions.m -text
+subethaedit/NSStringTCMAdditions.h -text
+subethaedit/NSStringTCMAdditions.m -text
 subethaedit/SubEthaEdit.xcode/mbo.pbxuser -text
 subethaedit/SubEthaEdit.xcode/project.pbxproj -text
 subethaedit/SubEthaEdit_Prefix.pch -text
+subethaedit/TCMBEEP/TCMBEEPChannel.h -text
+subethaedit/TCMBEEP/TCMBEEPChannel.m -text
+subethaedit/TCMBEEP/TCMBEEPFrame.h -text
+subethaedit/TCMBEEP/TCMBEEPFrame.m -text
+subethaedit/TCMBEEP/TCMBEEPListener.h -text
+subethaedit/TCMBEEP/TCMBEEPListener.m -text
+subethaedit/TCMBEEP/TCMBEEPManagementProfile.h -text
+subethaedit/TCMBEEP/TCMBEEPManagementProfile.m -text
+subethaedit/TCMBEEP/TCMBEEPMessage.h -text
+subethaedit/TCMBEEP/TCMBEEPMessage.m -text
+subethaedit/TCMBEEP/TCMBEEPProfile.h -text
+subethaedit/TCMBEEP/TCMBEEPSession.h -text
+subethaedit/TCMBEEP/TCMBEEPSession.m -text
 subethaedit/main.m -text
 subethaedit/version.plist -text
