--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -28,7 +28,7 @@
 	<key>CFBundleExecutable</key>
 	<string>SubEthaEdit</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>SubEthaEdit.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.apple.myApp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
