- implemented chain of events to start a status profile down   to the handshake profile. way up is still to go - added convenince methods for TXT record access - made TCMBEEPProfile a class rather than a protocol

--- a/.gitattributes
+++ b/.gitattributes
@@ -493,6 +493,7 @@ subethaedit/TCMBEEP/TCMBEEPManagementProfile.m -text
 subethaedit/TCMBEEP/TCMBEEPMessage.h -text
 subethaedit/TCMBEEP/TCMBEEPMessage.m -text
 subethaedit/TCMBEEP/TCMBEEPProfile.h -text
+subethaedit/TCMBEEP/TCMBEEPProfile.m -text
 subethaedit/TCMBEEP/TCMBEEPSession.h -text
 subethaedit/TCMBEEP/TCMBEEPSession.m -text
 subethaedit/TCMFoundation/CFTreeTCMAdditions.h -text
