- implemented chain of events to start a status profile down   to the handshake profile. way up is still to go - added convenince methods for TXT record access - made TCMBEEPProfile a class rather than a protocol

--- a/.gitattributes
+++ b/.gitattributes
@@ -186,11 +186,15 @@ subethaedit/English.lproj/Preferences.nib/keyedobjects.nib -text
 subethaedit/English.lproj/RendezvousBrowser.nib/classes.nib -text
 subethaedit/English.lproj/RendezvousBrowser.nib/info.nib -text
 subethaedit/English.lproj/RendezvousBrowser.nib/keyedobjects.nib -text
+subethaedit/HandshakeProfile.h -text
+subethaedit/HandshakeProfile.m -text
 subethaedit/Info.plist -text
 subethaedit/MyDocument.h -text
 subethaedit/MyDocument.m -text
 subethaedit/NSDictionaryTCMAdditions.h -text
 subethaedit/NSDictionaryTCMAdditions.m -text
+subethaedit/NSNetServiceTCMAdditions.h -text
+subethaedit/NSNetServiceTCMAdditions.m -text
 subethaedit/NSStringTCMAdditions.h -text
 subethaedit/NSStringTCMAdditions.m -text
 subethaedit/RendezvousBrowserController.h -text
@@ -210,8 +214,13 @@ subethaedit/TCMBEEP/TCMBEEPManagementProfile.m -text
 subethaedit/TCMBEEP/TCMBEEPMessage.h -text
 subethaedit/TCMBEEP/TCMBEEPMessage.m -text
 subethaedit/TCMBEEP/TCMBEEPProfile.h -text
+subethaedit/TCMBEEP/TCMBEEPProfile.m -text
 subethaedit/TCMBEEP/TCMBEEPSession.h -text
 subethaedit/TCMBEEP/TCMBEEPSession.m -text
+subethaedit/TCMMillionMonkeys/TCMMMBEEPSessionManager.h -text
+subethaedit/TCMMillionMonkeys/TCMMMBEEPSessionManager.m -text
+subethaedit/TCMMillionMonkeys/TCMMMPresenceManager.h -text
+subethaedit/TCMMillionMonkeys/TCMMMPresenceManager.m -text
 subethaedit/TCMMillionMonkeys/TCMMMUser.h -text
 subethaedit/TCMMillionMonkeys/TCMMMUser.m -text
 subethaedit/TCMMillionMonkeys/TCMMMUserManager.h -text
