--- a/.gitattributes
+++ b/.gitattributes
@@ -180,9 +180,7 @@ subethaedit/English.lproj/MainMenu.nib/keyedobjects.nib -text
 subethaedit/English.lproj/MyDocument.nib/classes.nib -text
 subethaedit/English.lproj/MyDocument.nib/info.nib -text
 subethaedit/English.lproj/MyDocument.nib/keyedobjects.nib -text
-subethaedit/English.lproj/Preferences.nib/classes.nib -text
-subethaedit/English.lproj/Preferences.nib/info.nib -text
-subethaedit/English.lproj/Preferences.nib/keyedobjects.nib -text
+subethaedit/English.lproj/Preferences.strings -text
 subethaedit/English.lproj/RendezvousBrowser.nib/classes.nib -text
 subethaedit/English.lproj/RendezvousBrowser.nib/info.nib -text
 subethaedit/English.lproj/RendezvousBrowser.nib/keyedobjects.nib -text
@@ -197,6 +195,9 @@ subethaedit/NSNetServiceTCMAdditions.h -text
 subethaedit/NSNetServiceTCMAdditions.m -text
 subethaedit/NSStringTCMAdditions.h -text
 subethaedit/NSStringTCMAdditions.m -text
+subethaedit/Preferences.nib/classes.nib -text
+subethaedit/Preferences.nib/info.nib -text
+subethaedit/Preferences.nib/keyedobjects.nib -text
 subethaedit/RendezvousBrowserController.h -text
 subethaedit/RendezvousBrowserController.m -text
 subethaedit/SubEthaEdit.xcode/mbo.pbxuser -text
