- added Bencoding (for testing purposes) - added USRFUL message to StatusProfile - still to go: DOC ANN/RMV, STA INV/VIS

--- a/.gitattributes
+++ b/.gitattributes
@@ -219,6 +219,8 @@ subethaedit/TCMBEEP/TCMBEEPProfile.h -text
 subethaedit/TCMBEEP/TCMBEEPProfile.m -text
 subethaedit/TCMBEEP/TCMBEEPSession.h -text
 subethaedit/TCMBEEP/TCMBEEPSession.m -text
+subethaedit/TCMBencodingUtilities.h -text
+subethaedit/TCMBencodingUtilities.m -text
 subethaedit/TCMMillionMonkeys/TCMMMBEEPSessionManager.h -text
 subethaedit/TCMMillionMonkeys/TCMMMBEEPSessionManager.m -text
 subethaedit/TCMMillionMonkeys/TCMMMPresenceManager.h -text
