--- a/.gitattributes
+++ b/.gitattributes
@@ -221,6 +221,8 @@ subethaedit/TCMBEEP/TCMBEEPSession.h -text
 subethaedit/TCMBEEP/TCMBEEPSession.m -text
 subethaedit/TCMBencodingUtilities.h -text
 subethaedit/TCMBencodingUtilities.m -text
+subethaedit/TCMMMUserSEEAdditions.h -text
+subethaedit/TCMMMUserSEEAdditions.m -text
 subethaedit/TCMMillionMonkeys/TCMMMBEEPSessionManager.h -text
 subethaedit/TCMMillionMonkeys/TCMMMBEEPSessionManager.m -text
 subethaedit/TCMMillionMonkeys/TCMMMPresenceManager.h -text
