--- a/.gitattributes
+++ b/.gitattributes
@@ -228,6 +228,8 @@ subethaedit/TCMBEEP/TCMBEEPSession.h -text
 subethaedit/TCMBEEP/TCMBEEPSession.m -text
 subethaedit/TCMBencodingUtilities.h -text
 subethaedit/TCMBencodingUtilities.m -text
+subethaedit/TCMHost.h -text
+subethaedit/TCMHost.m -text
 subethaedit/TCMMMUserSEEAdditions.h -text
 subethaedit/TCMMMUserSEEAdditions.m -text
 subethaedit/TCMMillionMonkeys/TCMMMBEEPSessionManager.h -text
