- changed MyDocument into PlainTextDocument and made the necessary   changes in the project - removed MyDocument.nib - added rudimentary PlainTextWindowController + nib

--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -14,7 +14,7 @@
 			<key>CFBundleTypeIconFile</key>
 			<string></string>
 			<key>CFBundleTypeName</key>
-			<string>DocumentType</string>
+			<string>PlainTextType</string>
 			<key>CFBundleTypeOSTypes</key>
 			<array>
 				<string>????</string>
@@ -22,7 +22,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>NSDocumentClass</key>
-			<string>MyDocument</string>
+			<string>PlainTextDocument</string>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
