--- a/.gitattributes
+++ b/.gitattributes
@@ -183,9 +183,9 @@ subethaedit/English.lproj/Internet.nib/keyedobjects.nib -text
 subethaedit/English.lproj/MainMenu.nib/classes.nib -text
 subethaedit/English.lproj/MainMenu.nib/info.nib -text
 subethaedit/English.lproj/MainMenu.nib/keyedobjects.nib -text
-subethaedit/English.lproj/MyDocument.nib/classes.nib -text
-subethaedit/English.lproj/MyDocument.nib/info.nib -text
-subethaedit/English.lproj/MyDocument.nib/keyedobjects.nib -text
+subethaedit/English.lproj/PlainTextWindow.nib/classes.nib -text
+subethaedit/English.lproj/PlainTextWindow.nib/info.nib -text
+subethaedit/English.lproj/PlainTextWindow.nib/keyedobjects.nib -text
 subethaedit/English.lproj/Preferences.strings -text
 subethaedit/English.lproj/RendezvousBrowser.nib/classes.nib -text
 subethaedit/English.lproj/RendezvousBrowser.nib/info.nib -text
@@ -195,14 +195,16 @@ subethaedit/HandshakeProfile.m -text
 subethaedit/Info.plist -text
 subethaedit/InternetController.h -text
 subethaedit/InternetController.m -text
-subethaedit/MyDocument.h -text
-subethaedit/MyDocument.m -text
 subethaedit/NSDictionaryTCMAdditions.h -text
 subethaedit/NSDictionaryTCMAdditions.m -text
 subethaedit/NSNetServiceTCMAdditions.h -text
 subethaedit/NSNetServiceTCMAdditions.m -text
 subethaedit/NSStringTCMAdditions.h -text
 subethaedit/NSStringTCMAdditions.m -text
+subethaedit/PlainTextDocument.h -text
+subethaedit/PlainTextDocument.m -text
+subethaedit/PlainTextWindowController.h -text
+subethaedit/PlainTextWindowController.m -text
 subethaedit/Preferences.nib/classes.nib -text
 subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
