--- a/.gitattributes
+++ b/.gitattributes
@@ -261,6 +261,7 @@ subethaedit/TCMPreferenceModule.m -text
 subethaedit/TCMRendezvousBrowser.h -text
 subethaedit/TCMRendezvousBrowser.m -text
 subethaedit/artwork/DefaultPerson.tiff -text
+subethaedit/artwork/Participants.icns -text
 subethaedit/artwork/SubEthaEdit.icns -text
 subethaedit/debug.tiff -text
 subethaedit/main.m -text
