- added first try of an selection - added disclosure cell (non-functioning) - added status icons (preliminary) - made list view flipped (so it stays in the correct position   when the view is resized)

--- a/.gitattributes
+++ b/.gitattributes
@@ -262,6 +262,8 @@ subethaedit/TCMRendezvousBrowser.h -text
 subethaedit/TCMRendezvousBrowser.m -text
 subethaedit/artwork/DefaultPerson.tiff -text
 subethaedit/artwork/Participants.icns -text
+subethaedit/artwork/StatusLock.tiff -text
+subethaedit/artwork/StatusReadOnly.tiff -text
 subethaedit/artwork/SubEthaEdit.icns -text
 subethaedit/debug.tiff -text
 subethaedit/main.m -text
