Adding participants-drawer

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@ artwork/mockups/RendezvousBrowser.psd -text
 artwork/mockups/RendezvousBrowser2.psd -text
 documentation/autodoc/HTMLTemplate.html -text
 documentation/connection-channel-bla.jpg -text
+documentation/participants-drawer.jpg -text
 documentation/session-lifcycle.jpg -text
 documentation/whiteboard-1411.jpg -text
 prototype/BEEPSample/BEEPSample.xcode/mbo.pbxuser -text
