- Implemented first step of session handshake (SESINF) including support for user requests in this context - Initial support for second step of handshake (SESCON)

--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -43,6 +43,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>0.1</string>
+        <key>NSAppleScriptEnabled</key>
+	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
