--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto !eol
 artwork/mockups/RendezvousBrowser.psd -text
 artwork/mockups/RendezvousBrowser2.psd -text
+documentation/SessionProfile.txt -text
 documentation/autodoc/HTMLTemplate.html -text
 documentation/connection-channel-bla.jpg -text
 documentation/participants-drawer.jpg -text
